--- a/README
+++ b/README
@@ -18,20 +18,19 @@ Usage:
         http://localhost:5000/content/"@chris you around?"
 
 Improvements:
-    2. The ordering in the exercise is: mentions, emoticons, links. In my output, it's: emoticons, links, mentions
-         (alphabetical order). If this is a problem, fix it.
-    3. Change the example URL to
+    1. Change the example URL to
          http://localhost:5000/api/msg?'Olympics are starting soon; http://www.nbcolympics.com'
             i.e. use query params
-    4. Unit testing is currently in msg.py. Once #3 is fixed, test using cURL scripts or the equivalent.
-    5. Look at using Requests instead of urllib3.
-    6. Write a short script to start it in Production, activating the environment and redirecting output (unless better logging implemented; see #1).
-    7. Add a method for login
-    8. Add a capability for throttling users, to prevent DoS
-    9. Add a cache for URLs, since fetching them is expensive
-    10. Think about how to prevent a user from entering a malicious URL
-    11. Send gzipped json back instead of cleartext json
-    12. Add a mechanism for health reporting, that returns usages for CPU, mem, HDD, network
+    2. The ordering in the exercise is: mentions, emoticons, links. Verify this matches the jsonify output
+    3. Unit testing is currently in msg.py. Once #3 is fixed, test using cURL scripts or the equivalent.
+    4. Look at using Requests instead of urllib3.
+    5. Write a short script to start it in Production, activating the environment and redirecting output (unless better logging implemented; see #1).
+    6. Add a method for login
+    7. Add a capability for throttling users, to prevent DoS
+    8. Add a cache for URLs, since fetching them is expensive
+    9. Think about how to prevent a user from entering a malicious URL
+    10. Send gzipped json back instead of cleartext json
+    11. Add a mechanism for health reporting, that returns usages for CPU, mem, HDD, network
 
 
 
